--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,3 +2,8 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 20px;
 }
+@media screen and (min-width: 960px) {
+.navbar-position{
+    padding-left: 3rem;
+}
+}
